--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     flex-direction: column;
     width: 100%;
     height: 100vh;
-  }  
+  }
   input {
     margin : auto;
     width: 200px;
@@ -14,3 +14,9 @@ body {
     margin : auto;
     width: 200px;
   }
+  /*#export {
+    margin : auto;
+    width: 200px;
+    padding: 1rem;
+    text-align: center;
+  }*/
