--- a/style.css
+++ b/style.css
@@ -1,20 +1,81 @@
-body {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-  }
-  input {
-    margin : auto;
-    width: 200px;
-    padding: 1rem;
-    text-align: center;
-  }
-  #drop {
-    margin : auto;
-    width: 200px;
-  }
-  textarea {
-    width: 300px;
-    height: 150px;
-  }
+* {
+  display: block;
+  font-family: sans-serif;
+  font-size: 16px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+}
+
+head,
+script,
+style {
+  display: none;
+}
+
+.hidden {
+  display: none;
+  margin: 0;
+}
+
+button,
+input,
+textarea {
+  padding: 1rem;
+  border: 1px solid #ddd;
+}
+
+select {
+  width: 100%;
+  max-width: 320px;
+  height: calc(40px + 2vmin);
+  border: 1px solid #d8d8d8;
+  background: #fff;
+  font-size: calc(10px + 1vmin);
+  text-indent: calc(5px + 1vmin);
+  color: #a5a5a5;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  max-width: 50%;
+  min-width: 300px;
+  margin: 0 auto;
+  min-height: 100vh;
+}
+
+section > *+* {
+  margin-top: 1rem;
+}
+
+section div {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+section div input {
+  flex: 1 1 100%;
+}
+
+section h1 {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+section p {
+  font-size: .8rem;
+  text-align: center;
+}
+
+section .textarea {
+  width: 100%;
+  flex: 1 1 auto;
+  text-align: left;
+}
